Revision history for BSON

{{$NEXT}}

    [BUG FIXES]

    - Improved OID counter thread-safety

0.13      2015-04-07 12:02:29-04:00 America/New_York (TRIAL RELEASE)

    [BUG FIXES]

    - Fix t/10-bson.t bug comparing floating point values; now using
      Test::Number::Delta for comparison

0.12      2015-04-06 16:11:59-04:00 America/New_York

    [BUG FIXES]

    - added decoding support for BSON type 0x06 (Javascript "undefined");
      treated like type 0x0A (null value) and decoded as Perl undef

    [OPTIMIZATION]

    - Inlined most functions for 10-20% performance increase measured
      on a sample of Twitter tweets.

    [META]

    - Switched repository to Dist::Zilla structure using @DAGOLDEN plugin
      bundle and associated file layout

0.11    2011-12-14
        use Math::Int64 to address the 32-bit only Perl support

0.06    2011-09-26
        Lower the required Perl version to 5.8

0.04    2011-08-04 17:30 PST
        Add BSON::String type

0.03    2011-08-02 14:00:00 PST
        Fix regex parsing for Perl<5.14
        Fix thread dependency in oid.t

0.02    2011-07-25 19:10:00 PST
        Fix spelling errors

0.01    2011-07-22 16:45:00 PST
        First version, released.
